--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>欢迎访问huanzi-qch的GitHub-Pages</title>
-    <link rel="shortcut icon" type="image/x-icon" href="https://pic.cnblogs.com/avatar/1353055/20180830212901.png" media="screen" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/31408183?s=40&v=4" media="screen" />
   </head>
 <body>
   <p>这里会展示我的一下个人信息以及个人开源项目</p>
