--- a/index.html
+++ b/index.html
@@ -1,10 +1,201 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>欢迎访问huanzi-qch的GitHub-Pages</title>
-    <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/31408183?s=40&v=4" media="screen" />
-  </head>
+<head>
+    <title>huanzi-qch的Java开发工程师在线简历</title>
+    <!-- 引入logo图片 -->
+    <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/31408183?s=40&v=4"
+          media="screen"/>
+
+    <!-- jQuery文件-->
+    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+
+    <!-- 自定义web弹窗 CSS 文件 -->
+    <link href="https://files.cnblogs.com/files/huanzi-qch/tip.css" rel="stylesheet"/>
+    <script src="https://files.cnblogs.com/files/huanzi-qch/tip.js"></script>
+
+    <!-- 自定义样式 -->
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        a {
+            text-decoration: none;
+            padding: 0;
+            margin: 5px 0;
+            display: table;
+        }
+
+        a:hover {
+            color: red;
+        }
+
+        /* 主体 */
+        .main {
+            margin: 0 auto;
+            padding: 10px;
+            width: 1024px;
+            border: 1px solid #dad8d8;
+            background: #fbfbfb;
+        }
+
+        /* 大标题 */
+        h3 {
+            background-color: #7dd7ff;
+            padding: 5px;
+        }
+
+        /* 小标题 */
+        h4 {
+            background-color: #b4e2f7;
+            padding: 5px;
+        }
+
+        /* 大模块 */
+        .module {
+            background: #efefef;
+            border: 1px solid #dad8d8;
+            margin: 0 0 20px 0;
+            padding: 0 0 0 10px;
+        }
+
+        .module:hover {
+            border: 1px solid #00BCD4;
+        }
+
+        /*  */
+        .block {
+            padding: 0 0 10px 10px;
+        }
+    </style>
+
+    <!-- 默认打开新页面跳转 -->
+    <base target="_blank"/>
+</head>
 <body>
-  <p>这里会展示我的一下个人信息以及个人开源项目</p>
+<div class="main">
+    <!-- 标题 -->
+    <div class="section">
+        <h3 style="text-align: center;margin: 0;">Java开发工程师在线简历</h3>
+    </div>
+
+    <div class="section">
+        <h4>最新简历</h4>
+    </div>
+
+    <div class="section">
+        <h4>博客技术总结</h4>
+
+        <span>博客园地址：</span><a style="display: unset;" href="https://www.cnblogs.com/huanzi-qch/">https://www.cnblogs.com/huanzi-qch/</a><br/><br/>
+
+        <div class="module">
+            <p >SpringBoot系列</p>
+            <div class="block">
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9946591.html">SpringBoot系列——快速构建项目</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9916784.html">SpringBoot系列——花里胡哨的banner.txt</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9948060.html">SpringBoot系列——jar包与war包的部署</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9930390.html">SpringBoot系列——Thymeleaf模板</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9916478.html">SpringBoot系列——aop 面向切面</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9916079.html">SpringBoot系列——EnableScheduling，对定时器的支持</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9957987.html">SpringBoot系列——mail</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9952578.html">SpringBoot系列——WebSocket</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9964498.html">【转载】SpringBoot系列——Swagger2</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10239888.html">SpringBoot系列——Redis</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10000324.html">SpringBoot系列——i18n国际化</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10065136.html">SpringBoot系列——MyBatis整合</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9970545.html">SpringBoot系列——Spring-Data-JPA</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9984261.html">SpringBoot系列——Spring-Data-JPA（升级版）</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10281773.html">SpringBoot系列——Spring-Data-JPA（究极进化版）
+                    自动生成单表基础增、删、改、查接口</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10411581.html">SpringBoot系列——利用系统环境变量与配置文件的分支选择实现“智能部署”</a>
+            </div>
+        </div>
+
+        <div class="module">
+            <p>SpringCloud系列</p>
+            <div class="block">
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10131985.html">SpringCloud系列——Eureka 服务注册与发现</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10135946.html">SpringCloud系列——Feign 服务调用</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10136254.html">SpringCloud系列——Ribbon 负载均衡</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10142395.html">SpringCloud系列——Zuul 动态路由</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10149547.html">SpringCloud系列——Config 配置中心</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10155091.html">SpringCloud系列——Bus 消息总线</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10249227.html">SpringCloud系列——SSO 单点登录</a>
+            </div>
+        </div>
+
+        <div class="module">
+            <p >Spider Java爬虫系列</p>
+            <div class="block">
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9767698.html">HttpClients+Jsoup抓取笔趣阁小说，并保存到本地TXT文件</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9817831.html">httpclient+jsoup实现小说线上采集阅读</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9869471.html">htmlUnit加持，网络小蜘蛛的超级进化</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9418148.html">HttpClient+Jsoup模拟登陆贺州学院教务系统，获取学生个人信息</a>
+            </div>
+        </div>
+
+        <div class="module">
+            <p >SQL系列</p>
+            <div class="block">
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9962120.html">SQL行转列：decode函数</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9754846.html">利用反射跟自定义注解拼接实体对象的查询SQL</a>
+            </div>
+        </div>
+
+        <div class="module">
+            <p>JavaScript系列</p>
+            <div class="block">
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9842204.html">自定义input文件上传样式</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9853067.html">formData批量上传的多种实现</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9833297.html">laypage 物理分页与逻辑分页实例</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9562815.html">乐观锁机制解决多层嵌套异步ajax问题</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10082116.html">自定义web弹窗/层：简易风格的msg与可拖放的dialog，生成博客园文章目录弹窗</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10186367.html">基于“formData批量上传的多种实现” 的多图片预览、上传的多种实现</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10308716.html">select标签 禁止选择但又能通过序列化form表单传值到后台</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10497396.html">还在问跨域？本文记录js跨域的多种实现实例</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10523912.html">Web Worker——js的多线程，实现统计博客园总阅读量</a>
+                <a href=""></a>
+            </div>
+        </div>
+
+        <div class="module">
+            <p >即时通讯</p>
+            <div class="block">
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10059935.html">Java Socket通信实现私聊、群聊</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9889521.html">WebSocket+Java 私聊、群聊实例</a>
+            </div>
+        </div>
+
+        <div class="module">
+            <p>杂项</p>
+            <div class="block">
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9418279.html">基于SSM框架贺州学院校园二手交易平台设计与实现</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10097791.html">ZXing 生成、读取二维码（带logo）</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/10008261.html">Java GUI 单机版五子棋</a>
+                <a href="https://www.cnblogs.com/huanzi-qch/p/9964231.html">POI导出Excel</a>
+
+            </div>
+        </div>
+        <!--
+                <div class="module">
+                    <p></p>
+                    <div class="block">
+                        <a href=""></a>
+
+                    </div>
+                </div>
+                -->
+    </div>
+</div>
 </body>
+<script>
+    //生成目录弹窗
+    tip.generateContentList({
+        list1:$('h4'),//目录的一级标题集合，找到所有h2
+        list2:"$list1.nextAll('.module').find('p')",//目录的二级标题集合，找到所有的h3
+        offset: ['40%', '2%'],//弹窗位置
+        area:["200px","250px"]//弹窗大小
+    });
+</script>
 </html>
