--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>huanzi-qch的Java开发工程师在线简历</title>
+    <title>huanzi-qch的Java开发工程师在线简历  https://huanzi-qch.github.io/index.html</title>
     <!-- 引入logo图片 -->
     <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/31408183?s=40&v=4"
           media="screen"/>
@@ -47,10 +47,14 @@
         }
 
         /* 小标题 */
-        h4 {
+        h4.list1 {
             background-color: #b4e2f7;
             padding: 5px;
         }
+		
+		list2 {
+		
+		}
 
         /* 大模块 */
         .module {
@@ -81,16 +85,80 @@
     </div>
 
     <div class="section">
-        <h4>最新简历</h4>
+        <h4 class="list1">在线简历</h4>
+		
+		<div class="module">
+            <h4 class="list2"class="list2">个人信息</h4>
+            <div class="block">
+				<p>覃朝欢/男/1996</p>
+				<p>本科/贺州学院/物联网工程 2014-2018</p>
+				<p>手机：156-0784-4178</p>
+				<p>Email：huanzi.qch@qq.com</p>
+				<p>工作年限：2年</p>
+				<p>技术博客：https://www.cnblogs.com/huanzi-qch/（博客园）</p>
+				<p>期望薪资：XXXX</p>
+				<p>注：已离职 一周内到岗</p>
+			</div>
+		</div>
+		
+		<div class="module">
+            <h4 class="list2"class="list2">技能清单</h4>
+            <div class="block">
+				<p>1、XXX</p>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+			</div>
+		</div>
+		
+		<div class="module">
+            <h4 class="list2"class="list2">工作经历</h4>
+            <div class="block">
+				<p>天讯瑞达通信技术有限公司（2018.01 ~ 至今）</p>
+				<p>1、负责XXX</p>
+				<p></p>
+				<p></p>
+				<p></p>
+			</div>
+		</div>
+		
+		<div class="module">
+            <h4 class="list2"class="list2">项目经历</h4>
+            <div class="block">
+				<p>项目名称：该项目主要是XXXX。</p>
+				<p>实现技术：SpringBoot + XXX</p>
+				<p>项目描述：</p>
+				<p>1、XXX</p>
+				<p>职责描述：</p>
+				<p>1、XXX</p>
+			</div>
+		</div>
+		
+		<div class="module">
+            <h4 class="list2"class="list2">自我评价</h4>
+            <div class="block">
+				<p>1、XXXX</p>
+				<p></p>
+			</div>
+		</div>
+		
+		<div class="module">
+            <h4 class="list2"class="list2">致谢</h4>
+            <div class="block">
+				<p>感谢您花时间阅读我的简历，期待能有机会和您共事。</p>
+			</div>
+		</div>
+		
     </div>
 
     <div class="section">
-        <h4>博客技术总结</h4>
+        <h4 class="list1">博客技术总结</h4>
 
         <span>博客园地址：</span><a style="display: unset;" href="https://www.cnblogs.com/huanzi-qch/">https://www.cnblogs.com/huanzi-qch/</a><br/><br/>
 
         <div class="module">
-            <p >SpringBoot系列</p>
+            <h4 class="list2">SpringBoot系列</h4>
             <div class="block">
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9946591.html">SpringBoot系列——快速构建项目</a>
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9916784.html">SpringBoot系列——花里胡哨的banner.txt</a>
@@ -113,7 +181,7 @@
         </div>
 
         <div class="module">
-            <p>SpringCloud系列</p>
+            <h4>SpringCloud系列</h4>
             <div class="block">
                 <a href="https://www.cnblogs.com/huanzi-qch/p/10131985.html">SpringCloud系列——Eureka 服务注册与发现</a>
                 <a href="https://www.cnblogs.com/huanzi-qch/p/10135946.html">SpringCloud系列——Feign 服务调用</a>
@@ -126,7 +194,7 @@
         </div>
 
         <div class="module">
-            <p >Spider Java爬虫系列</p>
+            <h4 class="list2">Spider Java爬虫系列</h4>
             <div class="block">
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9767698.html">HttpClients+Jsoup抓取笔趣阁小说，并保存到本地TXT文件</a>
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9817831.html">httpclient+jsoup实现小说线上采集阅读</a>
@@ -136,7 +204,7 @@
         </div>
 
         <div class="module">
-            <p >SQL系列</p>
+            <h4 class="list2">SQL系列</h4>
             <div class="block">
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9962120.html">SQL行转列：decode函数</a>
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9754846.html">利用反射跟自定义注解拼接实体对象的查询SQL</a>
@@ -144,7 +212,7 @@
         </div>
 
         <div class="module">
-            <p>JavaScript系列</p>
+            <h4>JavaScript系列</h4>
             <div class="block">
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9842204.html">自定义input文件上传样式</a>
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9853067.html">formData批量上传的多种实现</a>
@@ -160,7 +228,7 @@
         </div>
 
         <div class="module">
-            <p >即时通讯</p>
+            <h4 class="list2">即时通讯</h4>
             <div class="block">
                 <a href="https://www.cnblogs.com/huanzi-qch/p/10059935.html">Java Socket通信实现私聊、群聊</a>
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9889521.html">WebSocket+Java 私聊、群聊实例</a>
@@ -168,7 +236,7 @@
         </div>
 
         <div class="module">
-            <p>杂项</p>
+            <h4 class="list2">杂项</h4>
             <div class="block">
                 <a href="https://www.cnblogs.com/huanzi-qch/p/9418279.html">基于SSM框架贺州学院校园二手交易平台设计与实现</a>
                 <a href="https://www.cnblogs.com/huanzi-qch/p/10097791.html">ZXing 生成、读取二维码（带logo）</a>
@@ -179,7 +247,7 @@
         </div>
         <!--
                 <div class="module">
-                    <p></p>
+                    <h4 class="list2"></h4>
                     <div class="block">
                         <a href=""></a>
 
@@ -192,8 +260,8 @@
 <script>
     //生成目录弹窗
     tip.generateContentList({
-        list1:$('h4'),//目录的一级标题集合，找到所有h2
-        list2:"$list1.nextAll('.module').find('p')",//目录的二级标题集合，找到所有的h3
+        list1:$('h4.list1'),//目录的一级标题集合，找到所有h2
+        list2:"$list1.nextAll('.module').find('h4.list2')",//目录的二级标题集合，找到所有的h3
         offset: ['40%', '2%'],//弹窗位置
         area:["200px","250px"]//弹窗大小
     });
