--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<p>工作年限：2年</p>
 				<p>技术博客：https://www.cnblogs.com/huanzi-qch/（博客园）</p>
 				<p>期望薪资：XXXX</p>
-				<p>注：已离职 一周内到岗</p>
+				<p>注：在职 一个月内到岗</p>
 			</div>
 		</div>
 		
